# ml_training

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  notes.txt  protocolo.txt  utils.cpp
knn/: CMakeLists.txt  knn.cpp  knn.hpp
test/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
